@@ -1,3 +1,8 @@
+2006-12-12  Sven Schuetz
+
+	* cimXmlGen.c, objectImpl.c:
+	Fixed 1613933: embedded Objects in Indications do not work
+
 2006-12-12  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
 
 	* array.c, providerMgr.c: 
